...
                    PopupMenuButton(
                      icon: const Icon(
                        Icons.more_vert,
                      ),
                      itemBuilder: (BuildContext context) => <PopupMenuEntry>[
                        PopupMenuItem(
                          child: const Text('Chấp nhận'),
                          onTap: () async {
                            if (indexList.isEmpty) {
                              showNotification(
                                  "Vui lòng chọn tài khoản cần xét duyệt!",
                                  status: Status.error);
                            } else {
...
                                },
                              );
                            }
                          },
                        ),
                        PopupMenuItem(
                          child: const Text('Từ chối'),
                          onTap: () async {
                            if (indexList.isEmpty) {
                              showNotification(
                                  "Vui lòng chọn tài khoản cần xét duyệt!",
                                  status: Status.error);
                            } else {
...
                    PopupMenuButton(
                      icon: const Icon(
                        Icons.more_vert,
                      ),
                      itemBuilder: (BuildContext context) => <PopupMenuEntry>[
                        PopupMenuItem(
                          child: const Text('Hoàn thành cách ly'),
                          onTap: () async {
                            if (indexList.isEmpty) {
                              showNotification(
                                  "Vui lòng chọn tài khoản cần hoàn thành cách ly!",
                                  status: Status.error);
                            } else {
...
                                rootNavigator:
                                    !Responsive.isDesktopLayout(context))
                            .push(MaterialPageRoute(
                                builder: (context) => const SearchMember()));
                      },
                      icon: const Icon(Icons.search),
                      tooltip: "Tìm kiếm",
                    ),
                ],
                pinned: true,
                floating: !Responsive.isDesktopLayout(context),
                forceElevated: innerBoxIsScrolled,
                bottom: TabBar(
                  controller: _tabController,
                  isScrollable: true,
                  indicatorColor: white,
                  tabs: const [
                    Tab(text: "Đang cách ly"),
                    Tab(text: "Chờ xét duyệt"),
                    Tab(text: "Nghi nhiễm"),
                    Tab(text: "Tới hạn xét nghiệm"),
                    Tab(text: "Cần chuyển phòng"),
                    Tab(text: "Dương tính"),
                    Tab(text: "Có thể hoàn thành cách ly"),
                    Tab(text: "Đã từ chối"),
                    Tab(text: "Đã hoàn thành cách ly"),
                    Tab(text: "Đã chuyển viện"),
                  ],
                ),
              ),
            ),
          ];
...
