...
    duration: Duration(seconds: duration),
    toastBuilder: (cancel) {
      return _CustomWidget(
        cancelFunc: cancel,
        title: (data is Response)
            ? (data.status == Status.success
                ? "Thành công"
                : (data.status == Status.warning ? "Cảnh báo" : "Lỗi"))
            : (status == Status.success
                ? "Thành công"
                : (status == Status.warning ? "Cảnh báo" : "Lỗi")),
        subTitle: (data is Response) ? data.message : data,
        backgroundColor: (data is Response)
            ? (data.status == Status.success
...
