...
  menusOptions.updateInfo: 'Cập nhật thông tin',
  menusOptions.createMedicalDeclaration: 'Khai báo y tế',
  menusOptions.medicalDeclareHistory: 'Lịch sử khai báo y tế',
  menusOptions.createTest: 'Tạo phiếu xét nghiệm',
  menusOptions.testHistory: 'Lịch sử xét nghiệm',
  menusOptions.vaccineDoseHistory: 'Thông tin tiêm chủng',
  menusOptions.changeRoom: 'Chuyển phòng',
  menusOptions.resetPassword: 'Đặt lại mật khẩu',
  menusOptions.destinationHistory: 'Lịch sử di chuyển',
  menusOptions.quarantineHistory: 'Lịch sử cách ly',
  menusOptions.completeQuarantine: 'Hoàn thành cách ly',
  menusOptions.requarantine: 'Tái cách ly',
  menusOptions.viewInfo: 'Xem thông tin',
  menusOptions.accept: 'Chấp nhận',
  menusOptions.deny: 'Từ chối',
  menusOptions.moveHospital: 'Chuyển viện',
  menusOptions.updateManagerInfo: 'Cập nhật thông tin',
};

...
